[package]
name = "arboreal"
version = "0.0.2"
authors = ["BentPen <bentpen97@gmail.com?"]
edition = "2024"
rust-version = "1.88"
description = "Library for building dynamic digraphs with generic data"
repository = "https://github.com/BentPen/arboreal-rs.git"
license = "MIT"
readme = "../README.md"
keywords = ["graph", "digraph", "dynamic"]

[dependencies]
fixed_deque = "1.3.0"
ron = "0.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
